--- a/app.json
+++ b/app.json
@@ -16,12 +16,15 @@
       "appName": "Elysia Mobile",
       "appVersion": "1.0.0",
       "buildNumber": "1",
-      "gitCommit": "e2c9a12"  
+      "gitCommit": "e2c9a12"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
+      "package": "com.elysia.app",
+      "versionCode": 1,
+      "googleServicesFile": "./google-services.json",
       "useNextNotificationsApi": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
