--- a/eas.json
+++ b/eas.json
@@ -1,11 +1,21 @@
 {
+  "cli": {
+    "version": ">= 16.26.0",
+    "appVersionSource": "remote"
+  },
   "build": {
     "development": {
-      "distribution": "internal",
-      "android": { "buildType": "apk" }
+      "developmentClient": true,
+      "distribution": "internal"
+    },
+    "preview": {
+      "distribution": "internal"
     },
     "production": {
-      "android": { "buildType": "app-bundle" }
+      "autoIncrement": true
     }
+  },
+  "submit": {
+    "production": {}
   }
 }
